--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   flutter_dotenv: ^5.0.2
   firebase_auth: ^3.6.2
+  shared_preferences: ^2.0.15
   firebase_core:
   http:
   http_interceptor:
